feat: added kung

--- a/Kristelle/final_report.bib
+++ b/Kristelle/final_report.bib
@@ -663,3 +663,12 @@
 	pages = {592--597},
 	file = {PDF:C\:\\Users\\iamkr\\Zotero\\storage\\FXFQI49E\\Cain et al. - 2021 - Convolution Processing Unit Featuring Adaptive Precision using Dynamic Reconfiguration.pdf:application/pdf},
 }
+
+@book{kung_systolic_1978,
+	series = {{CMU}-{CS}},
+	title = {Systolic {Arrays} for ({VLSI})},
+	url = {https://books.google.co.nz/books?id=pAKfHAAACAAJ},
+	publisher = {Carnegie-Mellon University, Department of Computer Science},
+	author = {Kung, H.T. and Leiserson, C.E. and SCIENCE, CARNEGIE-MELLON UNIV PITTSBURGH PA Dept of COMPUTER and Department, Carnegie Mellon University Computer Science},
+	year = {1978},
+}
