feat: finished background check

--- a/Kristelle/final_report.bib
+++ b/Kristelle/final_report.bib
@@ -672,3 +672,12 @@
 	author = {Kung, H.T. and Leiserson, C.E. and SCIENCE, CARNEGIE-MELLON UNIV PITTSBURGH PA Dept of COMPUTER and Department, Carnegie Mellon University Computer Science},
 	year = {1978},
 }
+
+@article{tan_vanishing_2019,
+	title = {Vanishing {Gradient} {Mitigation} with {Deep} {Learning} {Neural} {Network} {Optimization}},
+	abstract = {Deep structured learning has emerged as a new area of machine learning research with its wide range of applications in signal and information processing. There are two general aspects often discussed in various high level descriptions of deep learning: i.e. (a) its structural models consisting of multiple layers or stages intended for non-linear information processing, (b) optimization techniques speciﬁcally for supervised or unsupervised learning of feature representation at sequentially higher abstract layers. However, non-linear higher level abstraction are prone to vanishing gradient problem with saturated activation functions. In this paper, the experiment is setup to examine the plausibility of applying Approximate Greatest Descent in deep neural networks. The experiments tested both saturated and unsaturated activation function with up to ﬁve hidden layers. As a result, stochastic diagonal approximate greatest descent (SDAGD) demonstrated no sign of vanishing gradient when training with both saturated and unsaturated activation functions. When hidden layers are added, SDAGD could obtain reasonable results as compared to Stochastic Gradient Descent (SGD).},
+	language = {en},
+	author = {Tan, Hong Hui and Lim, King Hann},
+	year = {2019},
+	file = {PDF:C\:\\Users\\iamkr\\Zotero\\storage\\5J98J2JX\\Tan and Lim - 2019 - Vanishing Gradient Mitigation with Deep Learning Neural Network Optimization.pdf:application/pdf},
+}
